# xpmclient

./: CHANGELOG.md  CMakeLists.txt  README.md  adl.cpp  adl.h  baseclient.cpp  baseclient.h  benchmarks.cpp  benchmarks.h  config.txt  cudautil.cpp  cudautil.h  opencl.cpp  opencl.h  protocol.pb.cpp  protocol.pb.h  sha256.cpp  sha256.h  xpmclient.cpp  xpmclient.h  zcashcpuclient.cpp  zmqextras.cpp  zmqextras.h
cmake/: FindDependencies.cmake
contrib/: README.md  build.sh  deploy.sh  make_release.sh
gpu/: benchmarks.cl  fermat.cl  procs.cl  sha256.cl  sieve.cl
src/: CMakeLists.txt  adl.cpp  base58.cpp  baseclient.cpp  baseclient.h  cudautil.cpp  opencl.cpp  opencl.h  protocol.proto  sysinfo.h  zmqextras.cpp
src/cmake/: FindDependencies.cmake
src/codegen/: gcn.cpp  gcn.h  generic.cpp  generic.h
src/xpm/cuda/: benchmarks.cpp  xpmclient.cpp
src/xpm/opencl/: benchmarks.cl  benchmarks.cpp  benchmarks.h  clcommon.h  config.txt  fermat.cl  generic_config_kernel.h  procs.h  sha256.cl  sieve.cl  xpmclient.cpp  xpmclient.h
src/zcash/: equihash_original.cpp  equihash_original.h
src/zcash/gpu/: param.h
xpm/cuda/: benchmarks.cpp  benchmarks.cu  benchmarks.h  config.cu  config.txt  fermat.cu  procs.cu  sha256.cu  sieve.cu  xpmclient.cpp  xpmclient.h
xpm/gpu/: fermat.cl  sieve.cl
xpm/opencl/: benchmarks.cpp  sieve.cl  xpmclient.cpp  xpmclient.h
zcash/: equihash_original.cpp  zcashgpuclient.cpp  zcashgpuclient.h  zcashgpuclient_silent.cpp  zcashgpuclient_silent.h
zcash/gpu/: blake2bcl.h  common.h  equihash.cl  kernel.cl  param.h
